# bambu-cuts

./: .dockerignore  .gitignore  Dockerfile  LICENSE-3D-FILES.txt  MANIFEST.in  README.md  camera_example.py  compress_3mf.py  config.py  demo_jogger.py  demo_textual_jogger.py  example_gcodetools.py  fiel.py  find_printer.py  gcodetools.py  grbl_integration_example.py  grbl_server.py  jogger_grbl_integration.py  jogger_simple.py  list_printer_files.py  makegcode.py  print_gcode.py  pyproject.toml  requirements.txt  run.sh  start_grbl_server.py  svg2gcode.py  test_buttons.py  test_camera_simple.py  test_connection.py  test_grbl_server.py  test_http_streamer.py  test_jogger.py  test_position_display.py  test_rfc2217.py  test_simple_jogger.py  test_textual_jogger.py  test_virtual_serial.py  test_z_e_buttons.py  virtual_serial.py  (+2 more)
bambucuts/: __init__.py  a1_camera_streamer.py  cli.py  compress_3mf.py  config.py  dxf2svg.py  gcodetools.py  svg_path_joiner.py  template.3mf
bambucuts/html/: a1_camera_stream.html
bambucuts/webui/: README.md  __init__.py  app.py  requirements.txt
bambucuts/webui/static/: app.js  style.css
bambucuts/webui/templates/: index.html
cad/: Bambu A1 Roland Drag Knife v30.step  a1 mini pen holder.step  a1 mini pen holder.stl  a1_mini_roland_holder v7.step  a1_mini_roland_holder v7.stl
cad/cutter_stl/: cutter_bottom spring cap.stl  cutter_holder.stl  cutter_spacer.stl  cutter_top spring cap.stl
examples/: kirimoto_settings.km
laser board/: README.md  a1 mini laser holder.step  a1 mini laser holder.stl  code.py  lightburn_a1_mini_settings.lbzip
